# cops2

./: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  security.rs
src-tauri/src/api/: admin.rs  apis.rs  auth.rs  backup.rs  baggage.rs  dashboard.rs  detention.rs  masters.rs  mod.rs  offence.rs  queries.rs  reports.rs  statutes.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/db/: migrations.sql  mod.rs
src-tauri/src/models/: mod.rs  offence.rs  user.rs
src-tauri/src/pdf/: mod.rs
src/components/: DatePicker.tsx  DevModeBanner.tsx  DownloadToast.tsx  ErrorBoundary.tsx  PassportScanner.tsx
src/components/layout/: AppLayout.tsx  PrivateRoute.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useAppMode.ts  useDebounce.ts  useOsList.ts  useRemarksGenerator.ts
src/lib/: api.ts  queries.ts  queryClient.ts
src/pages/: ModuleSelection.tsx
src/pages/adjudication/: AdjudicatedList.tsx  AdjudicationForm.tsx  AdjudicationLayout.tsx  AdjudicationList.tsx  OfflineAdjudicationComplete.tsx  OfflineAdjudicationList.tsx  QuashedList.tsx  index.tsx
src/pages/apis/: index.tsx
src/pages/auth/: ChangePassword.tsx  Login.tsx
src/pages/backup/: OSTemplateEditor.tsx  RestoreBackup.tsx  StatutesAdmin.tsx
src/pages/master/: index.tsx
src/pages/offence/: OffenceForm.tsx  OffenceList.tsx  index.tsx
src/pages/query/: AdjudicationSummaryReport.tsx  BRDRLookupPage.tsx  CustomReport.tsx  ExportData.tsx  MonthlyReportPage.tsx  OSPrintView.tsx  OSQueryPage.tsx  index.tsx
src/pages/sdo/: OfflineAdjudicationForm.tsx  SDOLayout.tsx  index.tsx
src/pages/users/: UserManagement.tsx
